# binaryninja-api

./: .clang-format  .doxygen.h  .editorconfig  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.win  PythonAPIDocumentation.md  README.md  SECURITY.md  activity.cpp  activity.h  activity.hpp  analysis.hpp  api.pro  architecture.cpp  architecture.h  architecture.hpp  backgroundtask.cpp  backgroundtask.h  backgroundtask.hpp  basedetection.cpp  basedetection.h  basicblock.cpp  basicblock.h  basicblock.hpp  binaryninja_defs.h  binaryninjaapi.cpp  binaryninjaapi.h  binaryninjaapi_new.cpp  binaryninjaapi_new.hpp  binaryninjacore.h  binaryreader.cpp  binaryreader.h  binaryreader.hpp  binaryview.cpp  binaryview.h  (+191 more)
api-docs/: Makefile  (+4 more)
arch/arm64/: .gitignore  CMakeLists.txt  README.md  arch_arm64.cpp  arm64test.py  il.cpp  il.h  il_macros.h  neon_intrinsics.cpp  neon_intrinsics.h  test_disasm.py  test_gen.py  unpack_lookup.c
arch/arm64/disassembler/: .gitignore  Makefile-asan  Makefile-local  decode.h  decode2.c  decode_fields32.c  decode_scratchpad.c  disasm_test.py  format.c  format.h  pcode.c  sysregs.c  sysregs.h  test.c  test_cases.txt
arch/armv7/: CMakeLists.txt  README.md  arch_armv7.cpp  arch_armv7.h  il.cpp  il.h  test.py  test_lift.py
arch/mips/: .gitignore  CMakeLists.txt  README.md  arch_mips.cpp  il.cpp  il.h
arch/powerpc/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  arch_ppc.cpp  assembler.cpp  assembler.h  disassembler.cpp  disassembler.h  il.cpp  il.h  test_asm.cpp  test_disasm.cpp  test_lifting.py  util.cpp  util.h
arch/riscv/: CMakeLists.txt  Cargo.toml  README.md
arch/x86/: .gitignore  CMakeLists.txt  LICENSE  README.md  arch_x86.cpp  arch_x86_common_architecture.h  arch_x86_intrinsics.cpp  il.cpp  il.h  test_lifting.py  x86_intrinsic_cached_input_types.include  x86_intrinsic_cached_output_types.include  x86_intrinsic_input_type.include  x86_intrinsic_output_type.include  xed-mbuild.patch
examples/: CMakeLists.txt
examples/background_task/: CMakeLists.txt
examples/bin-info/: CMakeLists.txt  Makefile  Makefile.win
examples/breakpoint/: CMakeLists.txt  Makefile  Makefile.win
examples/cmdline_disasm/: CMakeLists.txt  Makefile
examples/enterprise_test/: CMakeLists.txt
examples/llil_parser/: CMakeLists.txt  Makefile  Makefile.win  README.md
examples/mlil_parser/: CMakeLists.txt  Makefile  Makefile.win
examples/print_syscalls/: CMakeLists.txt  Makefile  Makefile.win
examples/triage/: CMakeLists.txt  analysisinfo.cpp  analysisinfo.h  baseaddress.cpp  baseaddress.h  basedetection.cpp  basedetection.h  byte.cpp  byte.h  entropy.cpp  entropy.h  entry.cpp  entry.h  exports.cpp  exports.h  fileinfo.cpp  fileinfo.h  files.cpp  files.h  headers.cpp  headers.h  imports.cpp  imports.h  librariesinfo.cpp  librariesinfo.h  sections.cpp  sections.h  strings.cpp  strings.h  triage.cpp  view.cpp  view.h
examples/uinotification/: CMakeLists.txt  uinotification.cpp  uinotification.h
examples/x86_extension/: CMakeLists.txt  Makefile
lang/c/: CMakeLists.txt  pseudoc.cpp  pseudoc.h
lang/rust/: CMakeLists.txt  pseudorust.cpp  pseudorust.h  rusttypes.cpp  rusttypes.h
platform/decree/: CMakeLists.txt  README.md  platform_decree.cpp
platform/efi/: CMakeLists.txt  README.md  platform_efi.cpp
platform/freebsd/: CMakeLists.txt  README.md  platform_freebsd.cpp
platform/linux/: CMakeLists.txt  README.md  platform_linux.cpp
platform/mac/: CMakeLists.txt  README.md  platform_mac.cpp
platform/windows/: CMakeLists.txt  README.md  platform_windows.cpp
platform/windows-kernel/: CMakeLists.txt  README.md  platform_windows_kernel.cpp
plugins/msvc_rtti/: CMakeLists.txt  README.md  plugin.cpp  rtti.cpp  rtti.h
python/: CMakeLists.txt  __init__.py  _binaryninjacore.pyi  architecture.py  associateddatastore.py  basedetection.py  basicblock.py  binaryview.py  bncompleter.py  bntype.py  callingconvention.py  commonil.py  compatibility.py  component.py  database.py  databuffer.py  dataclasses.py  datarender.py  debuginfo.py  decorators.py  demangle.py  deprecation.py  downloadprovider.py  enterprise.py  exceptions.py  externallibrary.py  fileaccessor.py  filemetadata.py  flowgraph.py  function.py  functionrecognizer.py  generator.cpp  highlevelil.py  highlight.py  interaction.py  languagerepresentation.py  lineardisassembly.py  log.py  lowlevelil.py  mainthread.py  (+24 more)
python/collaboration/: __init__.py  changeset.py  compatibility.py  databasesync.py  file.py  folder.py  group.py  merge.py  permission.py  project.py  remote.py  snapshot.py  user.py  util.py
python/enum/: __init__.py
python/examples/: README.md  angr_plugin.py  arch_hook.py  arm-syscall.py  asm_to_llil_view.py  bin-info.py  bin_info.py  breakpoint.py  cli_dis.py  cli_lift.py  custom_graph_layout.py  custom_tooltip.py  debug_info.py  debug_info_parser.py  export-svg.py  export_svg.py  feature_map.py  hellodockwidget.py  helloglobalarea.py  hellopane.py  hellosidebar.py  instruction-iterator.py  instruction_iterator.py  jump-table.py  jump_table.py  linear_mlil.py  make_code.py  mappedview.py  nds.py  nes.py  notification_callbacks.py  nsf.py  pe_stat.py  print_syscalls.py  pseudo_python.py  raw_binary_base_detection.py  tarview.py  test_debug_info  typelib_create.py  typelib_dump.py  (+5 more)
rust/: CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
rust/binaryninja-derive/: Cargo.toml
rust/binaryninjacore-sys/: Cargo.toml  build.rs  wrapper.hpp
rust/src/: activity.rs  analysiscontext.rs  architecture.rs  backgroundtask.rs  basedetection.rs  basicblock.rs  binaryreader.rs  binaryview.rs  binarywriter.rs  callingconvention.rs  command.rs  component.rs  custombinaryview.rs  database.rs  databuffer.rs  datarenderer.rs  debuginfo.rs  demangle.rs  disassembly.rs  downloadprovider.rs  enterprise.rs  errors.rs  externallibrary.rs  ffi.rs  fileaccessor.rs  filemetadata.rs  flowgraph.rs  function.rs  functionrecognizer.rs  headless.rs  interaction.rs  lib.rs  linearview.rs  llil.rs  logger.rs  mainthread.rs  metadata.rs  mlil.rs  operand_iter.rs  platform.rs  (+21 more)
(+1134 files in other folders)
