add_subdirectory(bin-info)
add_subdirectory(breakpoint)
add_subdirectory(cmdline_disasm)
add_subdirectory(llil_parser)
add_subdirectory(mlil_parser)
add_subdirectory(print_syscalls)
if(NOT HEADLESS)
	add_subdirectory(uinotification)
endif()
if(NOT DEMO AND NOT PERSONAL)
	add_subdirectory(workflows/inliner)
	add_subdirectory(workflows/objectivec)
	add_subdirectory(workflows/tailcall)
endif()
add_subdirectory(x86_extension)
