[package]
name = "binaryninja"
version = "0.1.0"
authors = ["Ryan Snyder <ryan@vector35.com>", "Kyle Martin <kyle@vector35.com>"]
edition = "2021"

[features]
noexports = []

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
libc = "0.2"
rayon = { version = "1.0", optional = true }
binaryninjacore-sys = { path = "binaryninjacore-sys" }

[workspace]
members = [
    "examples/basic_script",
    "examples/decompile",
    "examples/dwarf/dwarf_export",
    "examples/dwarf/dwarf_import",
    "examples/dwarf/dwarfdump",
    "examples/dwarf/shared",
    "examples/flowgraph",
    "examples/minidump",
    "examples/mlil_visitor",
    "examples/mlil_lifter",
    "examples/hlil_visitor",
    "examples/hlil_lifter",
    "examples/template"
]
