[package]
name = "binaryninja"
version = "0.1.0"
authors = ["Ryan Snyder <ryan@vector35.com>", "Kyle Martin <kyle@vector35.com>"]
edition = "2021"

[features]
noexports = []

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
libc = "0.2"
rayon = { version = "1.8", optional = true }
binaryninjacore-sys = { path = "binaryninjacore-sys" }
strum = { version = "0.26.2", features = ["derive"] }

[patch.crates-io]
# Patched pdb crate to implement some extra structures
pdb = { path = "./examples/pdb-ng/pdb-0.8.0-patched" }

[workspace]
members = [
    "examples/basic_script",
    "examples/decompile",
    "examples/dwarf/dwarf_export",
    "examples/dwarf/dwarf_import",
    "examples/dwarf/dwarfdump",
    "examples/dwarf/shared",
    "examples/flowgraph",
    "examples/minidump",
    "examples/mlil_visitor",
    "examples/mlil_lifter",
    "examples/hlil_visitor",
    "examples/hlil_lifter",
    "examples/pdb-ng",
    "examples/pdb-ng/demo",
    "examples/template"
]

[profile.release]
debug = 1
